--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,19 @@
 
         <div id="app"></div>
 
+        <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyDz5545ElQ3tUQcwQgePh2M1FB-kmP2bDA",
+                authDomain: "dungeoneer-f3872.firebaseapp.com",
+                databaseURL: "https://dungeoneer-f3872.firebaseio.com",
+                storageBucket: "dungeoneer-f3872.appspot.com",
+                messagingSenderId: "895097345143"
+            };
+            firebase.initializeApp(config);
+        </script>
+
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="js/application.js" type="text/javascript"></script>
         
