--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,22 @@
               <form>
                 <h2>Add New Character</h2>
                 <div class="field">
-                  <input type="text" name="firstname" value="" placeholder="First Name">
+                  <input type="text" name="firstname" value="" placeholder="First Name" required>
                 </div>
                 <div class="field">
-                  <input type="text" name="lastname" value="" placeholder="Last Name">
+                  <input type="text" name="lastname" value="" placeholder="Last Name" required>
                 </div>
                 <div class="field">
-                  <input type="text" name="campaign" value="" placeholder="Campaign">
+                  <input type="text" name="campaign" value="" placeholder="Campaign" required>
                 </div>
                 <div class="field">
-                  <input type="file" name="avatar" accept="image/*">
+                  <input type="file" name="avatar" accept="image/*" required>
                 </div>
                 <div class="field">
                   <input type="submit" name="submit" value="Submit">
                 </div>
               </form>
-              <div class="view"></div>
+              <div id="view"></div>
             </div>
           </div>
         </div>
@@ -51,7 +51,7 @@
             firebase.initializeApp(config);
         </script>
 
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="js/application.js" type="text/javascript"></script>
         
     </body>
