--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             firebase.initializeApp(config);
         </script>
 
-        <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="js/application.js" type="text/javascript"></script>
         
     </body>
