--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
                   <input type="text" name="campaign" value="" placeholder="Campaign" required>
                 </div>
                 <div class="field">
+                  <label for="avatar">Select Avatar Image</label><br>
                   <input type="file" name="avatar" accept="image/*" required>
                 </div>
                 <div class="field">
