--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                   <input type="text" name="campaign" value="" placeholder="Campaign" required>
                 </div>
                 <div class="field">
-                  <label for="avatar">Select Avatar Image</label><br>
+                  <label for="avatar">Select Avatar Image (300x300)</label><br>
                   <input type="file" name="avatar" accept="image/*" required>
                 </div>
                 <div class="field">
