--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
           </div>
         </div>
 
+        <div id="loading"></div>
+
         <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
         <script>
             // Initialize Firebase
@@ -53,6 +55,7 @@
         </script>
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="js/pace.min.js"></script>
         <script src="js/application.js" type="text/javascript"></script>
         
     </body>
