--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,10 @@
                   <input type="submit" name="submit" value="Submit">
                 </div>
               </form>
-              <div id="view"></div>
+              <div id="view">
+                <div class="close">Close X</div>
+                <div class="contents"></div>
+              </div>
             </div>
           </div>
         </div>
