--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <ul class="list"></ul>
             <div class="add">
               <form>
-                <h2>Add New Character</h2>
+                <h1>Add New Character</h1>
                 <div class="field">
                   <input type="text" name="firstname" value="" placeholder="First Name" required>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="field">
                   <input type="text" name="campaign" value="" placeholder="Campaign" required>
                 </div>
-                <div class="field">
+                <div class="field upload">
                   <label for="avatar">Select Avatar Image (300x300)</label><br>
                   <input type="file" name="avatar" accept="image/*" required>
                 </div>
@@ -40,6 +40,10 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div id="footer">
+          &copy; 2016 Dungeoneer
         </div>
 
         <div id="loading"></div>
