--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="field upload">
                   <label for="avatar">Select Avatar Image (300x300)</label><br>
-                  <input type="file" name="avatar" accept="image/*" required>
+                  <input type="file" name="avatar" id="avatar" accept="image/*" required>
                 </div>
                 <div class="field">
                   <input type="submit" name="submit" value="Submit">
