--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>App</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
@@ -34,9 +35,10 @@
                   <input type="submit" name="submit" value="Submit">
                 </div>
               </form>
-              <div id="view">
-                <div class="close">Close X</div>
-                <div class="contents"></div>
+              <div id="view">                
+                <div class="contents">
+                  <div class="close">X</div>
+                </div>
               </div>
             </div>
           </div>
