--- a/public/view.html
+++ b/public/view.html
@@ -109,12 +109,14 @@
                   <div class="row">
                     <div class="cell campaign">
                       <div class="title">Campaign</div>
-                      <div class="data">
-                        <div class="list">
-                          <div class="fill">
-                            <span>Name</span>
-                            <p class="val">0</p>
-                            <div class="remover">-</div>
+                      <div class="campaings">
+                        <div class="data">
+                          <div class="list">
+                            <div class="fill">
+                              <span>Name</span>
+                              <p class="val">0</p>
+                              <div class="remover">-</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -124,7 +126,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="cell scores">
+                    <div class="scores">
                       <div class="cell ability">
                         <div class="title">Abilit Scores</div>
                         <div class="data">
@@ -254,6 +256,9 @@
                             <p class="val">0</p>
                             <p class="mod">0</p>
                           </div>
+                          <div class="adder">
+                            <div class="add">+ campaign</div>
+                          </div>
                         </div>
                         <div class="list">
                           <div class="fill">
@@ -336,7 +341,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="cell weapons">
+                    <div class="weapons">
                       <div class="cell equip">
                         <div class="title">Equipped</div>
                         <div class="data">
@@ -392,7 +397,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="cell inventory">
+                    <div class="inventory">
                       <div class="cell bag">
                         <div class="title">Bag</div>
                         <div class="data">
