--- a/comps/index.html
+++ b/comps/index.html
@@ -68,7 +68,8 @@
 
         	<div class="comp weapons">
         		
-        		<!-- - add weapon
+        		<!-- 
+        		- add weapon
         		- remove weapon
         		- edit weapon
 
@@ -83,7 +84,8 @@
         		ability, x
         		story, x
         		ac, x
-        		equipped x -->
+        		equipped x 
+        		-->
 
         		<div class="equipped">
         			
