--- a/comps/index.html
+++ b/comps/index.html
@@ -21,14 +21,17 @@
         <![endif]-->
 
         <!-- Data -->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         	var char = {
         		'weapons': [
         			{
-        				'name': 'Thor',
+        				'name': 'Thor, The Hammer',
         				'img': null,
         				'hit': 3,
-        				'critical': 20,
+        				'critical': {
+        					'roll': 20,
+        					'mod': 2
+        				},
         				'damage': {
         					'rolls': 2,
         					'die': 'd8',
@@ -39,13 +42,16 @@
         				'armor': 0,
         				'ability': 'Lightning Bolt: Deals 4 d8 lightning damage in a radius of 20ft around the caster. Cannot miss. Will save of 20. Can only be used once every 24hrs.',
         				'flavor': 'A hammer named after the all mighty god of thunder and lighting.',
-        				'equipped': 'yes'
+        				'equipped': 'no'
         			},
         			{
-        				'name': 'Loki',
+        				'name': 'Loki, The Staff',
         				'img': null,
         				'hit': 5,
-        				'critical': 18,
+        				'critical': {
+        					'roll': 18,
+        					'mod': 2
+        				},
         				'damage': {
         					'rolls': 1,
         					'die': 'd10',
@@ -57,10 +63,30 @@
         				'ability': 'Feint: See through a persons choices. Gain +20 to insight rolls.',
         				'flavor': 'A staff of a trickster.',
         				'equipped': 'no'
+        			},
+        			{
+        				'name': 'Lorence, The Shiv',
+        				'img': null,
+        				'hit': 5,
+        				'critical': {
+        					'roll': 15,
+        					'mod': 3
+        				},
+        				'damage': {
+        					'rolls': 2,
+        					'die': 'd8',
+        					'type': 'piercing'
+        				},
+        				'range': 10,        				
+        				'type': 'dagger',
+        				'armor': 5,
+        				'ability': 'Mortality: You must know your oponents weakness to deal damage. Rolls of 15 or higher reveal weakness. If you confirm the hit, you may choose to deal half damage as true damage.',
+        				'flavor': 'A blade of an old woe.',
+        				'equipped': 'no'
         			}
         		]
         	};
-        </script>
+        </script> -->
 
         <!-- Add your site or application content here -->
         <div id="comps">
@@ -99,6 +125,19 @@
 
 
         </div>
+
+        <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyDz5545ElQ3tUQcwQgePh2M1FB-kmP2bDA",
+                authDomain: "dungeoneer-f3872.firebaseapp.com",
+                databaseURL: "https://dungeoneer-f3872.firebaseio.com",
+                storageBucket: "dungeoneer-f3872.appspot.com",
+                messagingSenderId: "895097345143"
+            };
+            firebase.initializeApp(config);
+        </script>
 
         <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
