--- a/comps/index.html
+++ b/comps/index.html
@@ -71,6 +71,7 @@
                         'flavor': 'A blade of an old woe.',
                         'equipped': 'no'
                     } -->
+                    <div class="close">x close</div>
                     <form>
                         <div><input type="text" name="name" value="" placeholder="Name" required></div>
                         <div><label for="thumb">Thumbnail</label>
